Add cargo manifest description field

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "rm-lines"
+description = "Binary parser for the reMarkable lines (.rm) file format"
 version = "0.1.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
